objects/Case_Component_Setting__mdt/Case_Component_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Case Component Setting</description>
    <label>Case Component Setting</label>
    <pluralLabel>Case Component Settings</pluralLabel>
</CustomObject>