objects/Case_Component_Setting__mdt/fields/Route_To_Poland__c.field-meta.xml
<CustomField>
    <fullName>Route_To_Poland__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Route Case with this Component To Poland when otherwise eligible</description>
    <label>Route To Poland</label>
    <type>Checkbox</type>
</CustomField>